--- a/src/app/gameField/GameField.module.scss
+++ b/src/app/gameField/GameField.module.scss
@@ -14,6 +14,6 @@
 	}
 
 	.bullet {
-		@apply absolute bg-red-400 w-4 h-4 rounded-full bottom-[116px] left-52 transition-transform duration-500;
+		@apply absolute bg-red-400 w-4 h-4 rounded-full bottom-[116px] left-52;
 	}
 }
