--- a/src/app/level1/Level1.module.scss
+++ b/src/app/level1/Level1.module.scss
@@ -1,15 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+
 .problemSolve {
-	@apply w-full h-1/2 p-10 flex gap-4;
+	@apply w-full h-1/2 p-8;
+
+	.controller {
+		@apply flex justify-between;
+
+		.controllerBtn {
+			font-family: 'Titan One', sans-serif;
+			background: linear-gradient(180deg, #ffd700 60%, #937c00 100%);
+			background-clip: text;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+			-webkit-text-stroke-width: 1px;
+			-webkit-text-stroke-color: #000;
+			font-size: 40px;
+			text-transform: uppercase;
+		}
+
+		.level {
+			@apply text-4xl;
+			color: #fff;
+			text-align: center;
+			-webkit-text-stroke-width: 1px;
+			-webkit-text-stroke-color: #000;
+			font-family: 'Titan One';
+		}
+	}
 
 	.problemText {
-		@apply text-base max-w-96 w-full;
+		@apply w-full h-full flex flex-col gap-10 justify-center items-center;
+
+		p {
+			@apply text-center max-w-[1400px] text-4xl;
+			color: #fff;
+			text-align: center;
+			-webkit-text-stroke-width: 1px;
+			-webkit-text-stroke-color: #000;
+			font-family: 'Titan One';
+		}
 	}
 
-	input {
-		@apply h-10 w-52 pl-4 border border-purple-500 rounded-lg;
-	}
+	.field {
+		@apply flex items-center gap-4;
 
-	button {
-		@apply h-10 w-52 text-center bg-purple-500 rounded-lg text-white;
+		label {
+			@apply text-4xl;
+			color: #fff;
+			text-align: center;
+			-webkit-text-stroke-width: 1px;
+			-webkit-text-stroke-color: #000;
+			font-family: 'Titan One';
+		}
+		input {
+			font-family: 'Titan One';
+			font-weight: 400;
+			@apply h-20 w-28 rounded-3xl text-center text-3xl pl-2;
+		}
 	}
 }
